Wed Feb  5 12:54:25 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c: refactoring, especially about string flags.

	* string.c (STR_UNSET_NOCAPA): removed.
	  Use FL_UNSET() with STR_SHARED.

	* string.c (rb_str_capacity): check STR_SHARED directly
	  beacuse it is not a embed string.

	* string.c (rb_str_modify_expand): ditto.

	* string.c (rb_str_shared_replace): use STR_SET_SHARED().

	* string.c (str_make_independent_expand): remove STR_UNSET_NOCAPA()
	  because `str' is not shared string.

Wed Feb  5 12:11:04 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (RESIZE_CAPA): should not resize shared string.

Wed Feb  5 11:46:42 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_children): STR_ASSOC is no longer available.
	  Reported by @nagachika.
	  http://d.hatena.ne.jp/nagachika/20140204

Wed Feb  5 11:27:22 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_str_new_frozen): refactoring code.
	  * Move code from str_new_frozen_with_klass() (and remove it)
	  * `aux.shared' should not be 0 for STR_SHARED strings.

Wed Feb  5 04:23:41 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: New release of psych.
	* ext/psych/psych.gemspec: ditto

Wed Feb  5 04:16:41 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/yaml/emitter.c: merge libyaml 0.1.5
	* ext/psych/yaml/loader.c: ditto
	* ext/psych/yaml/parser.c: ditto
	* ext/psych/yaml/reader.c: ditto
	* ext/psych/yaml/scanner.c: ditto
	* ext/psych/yaml/writer.c: ditto
	* ext/psych/yaml/yaml_private.h: ditto

Tue Feb  4 19:10:29 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c: use long allocator names instead of numbered
	  allocator names.
	  * rb_str_new2 -> rb_str_new_cstr
	  * rb_str_new4 -> rb_str_new_frozen
	  * rb_str_new5 -> rb_str_new_with_class
	  * str_new3 -> str_new_shared
	  * str_new4 -> str_new_frozen_with_klass

Tue Feb  4 17:20:03 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): return the filename with actual cases on